force-app/main/default/objects/Application__c/fields/Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>Parent_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Sub-Applications</relationshipLabel>
    <relationshipName>Sub_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>