force-app/main/default/objects/Application__c/fields/Stability__c.field-meta.xml
<CustomField>
    <fullName>Stability__c</fullName>
    <label>Stability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Unstable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>