force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Release_Status__c</columns>
    <columns>Stability__c</columns>
    <columns>Stability_Icon__c</columns>
    <columns>Parent_Application__c</columns>
    <columns>Product_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>